tests/errors/assign_f64_to_i32.orus
fn main() {
    let a: f64 = 3.14
    let b: i32 = a
}
